Mon Jan  7 03:28:32 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - Patch from Jacob Schmier: drivers/oneac.[ch]: Updated for models ON700XAU,
   ON1000XAU, ON1500XAU.

Sat Jan  5 18:45:26 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplite-hid.c: Don't apply battery voltage scaling if this
   isn't needed. Also, add some more variables and flags (so that we
   don't keep on asking for (semi)static data.

Sat Jan  5 11:20:06 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/*-hid.[ch]: Change the parameter passed to the conversion
   functions from (long) to (double) so that we are able to convert
   floating point values without losing precision.

Sat Jan  5 06:37:12 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: add phoenix subdriver to the list. Thanks
   Boris Kleint for pointing this out.

Fri Jan  4 17:46:40 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: Rename the "send_Z" command to "reset.input.minmax"

Fri Jan  4 06:56:22 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: added reconnect support based on the code
   from tripplite_usb driver.

Wed Jan  2 20:17:48 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/hidparser.c: Parsing continues if the HID path for a report
   ends in 0x00000000 (these will not be made available). Commonly used
   as placeholders.

Wed Jan  2 19:59:21 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/libhid.[ch]: In HIDDumpTree() show all reports that are parsed
   from the report descriptor. Remove parameter from HIDGetItemData() and
   HIDGetDataItem() that is never used.
 - drivers/usbhid.c: Implemented the above.

Tue Jan  1 15:31:01 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/usbhid-ups.c: Don't use the data we receive through input
   reports, but retreive it by polling for the feature report (only the
   report number is used to determine which one to get).
