@@ -183,6 +183,7 @@
 "Infosec"	"iPEL 500"	""	"megatec"
 "Infosec"	"iPEL 750"	""	"megatec"
 "Infosec"	"iPEL 1000"	""	"megatec"
+"Infosec"	"XP 500"	"USB"	"megatec_usb"
 
 "Ippon"		"(various)"		""	"megatec"
 
@@ -401,6 +402,8 @@
 
 "Orvaldi Power Protection"	"various"	"not 400 or 600"	"megatec"
 
+"Plexus"	"1000VA Pro"	"USB"	"megatec_usb ignoreoff"
+
 "Powercom"	"SMK-800A"			""	"megatec"
 "Powercom"	"SMK-1500A"			""	"megatec"
 "Powercom"	"SXL-1500A"			""	"megatec"
@@ -505,6 +508,7 @@
 "UNITEK"	"Alpha 1000is"		""	"megatec"
 "UNITEK"	"Alpha 500 ipE"		""	"megatec"
 "UNITEK"	"Alpha 2600"		""	"megatec"
+"UNITEK"	"Alpha 1200Sx"		"USB"	"megatec_usb"
 
 "UPSonic"	"CXR1000"		""	"megatec"
 "UPSonic"	"LAN Saver 600"		""	"genericups upstype=0"
