@@ -107,8 +107,9 @@ static usb_ups_t KnownDevices[] = {
 	{0x05b8, 0x0000, &agiler_subdriver},	/* Agiler UPS */
 	{0x0001, 0x0000, &krauler_subdriver},	/* Krauler UP-M500VA */
 	{0xffff, 0x0000, &krauler_subdriver},	/* Ablerex 625L USB */
-	{0x0665, 0x5161, &agiler_subdriver},	/* Belkin F6C1200-UNV */
+	{0x0665, 0x5161, &phoenix_subdriver},	/* Belkin F6C1200-UNV */
 	{0x06da, 0x0003, &phoenix_subdriver},	/* Mustek Powermust */
+	{0x0f03, 0x0001, &agiler_subdriver},	/* Unitek Alpha 1200Sx */
 	{-1, -1, NULL}		/* end of list */
 };
 
